--- a/DeLivre/DeLivre/Views/Cardapios.xaml
+++ b/DeLivre/DeLivre/Views/Cardapios.xaml
@@ -55,15 +55,19 @@
 
                                         <Grid>
                                             <Grid.ColumnDefinitions>
-                                                <ColumnDefinition Width="270" />
-                                                <ColumnDefinition Width="*" />
-                                            </Grid.ColumnDefinitions>
+                                               <ColumnDefinition Width="*" />
+                                           </Grid.ColumnDefinitions>
+                                            
                                             <Grid.RowDefinitions>
                                                 <RowDefinition Height="*"/>
                                             </Grid.RowDefinitions>
-                                            <StackLayout Orientation="Horizontal" Grid.Column="1" Grid.Row="0" Margin="5,0,5,0" HorizontalOptions="FillAndExpand">
-                                    <Label Text="{Binding ValorExibicao}" Grid.Row="0" TextColor="#E53935" FontAttributes="Bold" VerticalTextAlignment="Center" HorizontalTextAlignment="End" FontSize="13" />
-                                </StackLayout>
+                                           
+                                            <StackLayout Orientation="Horizontal" Grid.Column="0" Grid.Row="0" Margin="5,0,5,0" HorizontalOptions="EndAndExpand">
+                                                  <Label Text="{Binding ValorExibicao}" 
+                                                         Grid.Row="0" Grid.Column="1" TextColor="#E53935" 
+                                                         FontAttributes="Bold" VerticalTextAlignment="Center" 
+                                                         HorizontalTextAlignment="End" FontSize="13" />
+                                            </StackLayout>
                                         </Grid>
                                     </StackLayout>
                                 </ViewCell>
