Logotipo do estabelecimento, no cardapio, ajustes de update!

--- a/DeLivre/DeLivre/Views/Estabelecimentos.xaml
+++ b/DeLivre/DeLivre/Views/Estabelecimentos.xaml
@@ -24,8 +24,8 @@
                       BackgroundColor="White"                    
                       VerticalOptions="FillAndExpand"
                       HasUnevenRows="true"
-                      SeparatorColor="Black"
-                      Margin="0,-5,0,5"             
+                      SeparatorColor="Black" Refreshing="ListaEstabelecimento_Refreshing"
+                      Margin="0,-5,0,5" IsPullToRefreshEnabled="True"             
                       ItemTapped="ListaVagas_ItemTapped" >
                 <ListView.ItemTemplate>
                     <DataTemplate>
