--- a/DeLivre/DeLivre/Views/Cardapios.xaml
+++ b/DeLivre/DeLivre/Views/Cardapios.xaml
@@ -6,16 +6,26 @@
              xmlns:input="clr-namespace:Plugin.InputKit.Shared.Controls;assembly=Plugin.InputKit"
              xmlns:controls="clr-namespace:ImageCircle.Forms.Plugin.Abstractions;assembly=ImageCircle.Forms.Plugin"
              x:Class="DeLivre.Views.Cardapios" 
-             BackgroundColor="#EF5350">
+             BackgroundColor="#EF5350" >
     
     <ContentPage.ToolbarItems>
         <ToolbarItem Name="OnInformacoes" Order="Primary" Icon="ic_Info" Clicked="OnInformacoes_Clicked" Text="Carrinho" Priority="0" />
         <ToolbarItem Name="OnCarrinho" Order="Primary" Icon="ic_Carrinho" Clicked="OnCarrinho_Clicked" Text="Carrinho" Priority="1" />
     </ContentPage.ToolbarItems>
-
+    <NavigationPage.TitleView>
+        <StackLayout Orientation="Horizontal">
+            <StackLayout.GestureRecognizers>
+                <TapGestureRecognizer
+                    Tapped="TapGestureRecognizer_Tapped"/>
+            </StackLayout.GestureRecognizers>
+            <controls:CircleImage Source="{Binding Logo}" BorderColor="White" 
+                                  BorderThickness="2" Margin="5,0,10,0" 
+                                  WidthRequest="45" HeightRequest="45" 
+                                  Aspect="AspectFit"/>
+            <Label Text="{Binding Nome}" FontSize="16" TextColor="White" VerticalTextAlignment="Center"/>
+        </StackLayout>
+    </NavigationPage.TitleView>
     <StackLayout Padding="5,5,5,0" BackgroundColor="White" Orientation="Vertical">
-        <!--<input:AutoCompleteEntry x:Name="Pesquisar" HeightRequest="60" Annotation="None" ValidationMessage="Teste"  TextColor="#EF5350"
-                          ItemsSource="{Binding Tipo}" />-->
 
         <SearchBar x:Name="CardapioPesquisa" Placeholder="Pesquise por um lanche!" HeightRequest="40" BackgroundColor="White" TextChanged="CardapioPesquisa_TextChanged" />
 
