--- a/DeLivre/DeLivre/Views/Info.xaml
+++ b/DeLivre/DeLivre/Views/Info.xaml
@@ -17,7 +17,7 @@
               EasingIn="SpringIn"/>
     </pages:PopupPage.Animation>
 
-    <StackLayout WidthRequest="350" HeightRequest="350" BackgroundColor="White" Padding="5,10" IsClippedToBounds="True" HorizontalOptions="Center" VerticalOptions="Center">
+    <StackLayout WidthRequest="350" HeightRequest="400" BackgroundColor="White" Padding="5" IsClippedToBounds="True" HorizontalOptions="Center" VerticalOptions="Center">
         <cardView:CardView x:Name="CardEstabelecimento" BackgroundColor="White" CardViewHasShadow="True">
             <cardView:CardView.CardViewContent>
                 <StackLayout x:Name="Stack" 
@@ -29,9 +29,10 @@
                             <ColumnDefinition Width="*"/>
                             <ColumnDefinition Width="120"/>
                         </Grid.ColumnDefinitions>
-                        <controls:CircleImage x:Name="ImagemEstab" Grid.Column="1" BorderColor="#EF5350" 
+                        <controls:CircleImage x:Name="ImagemEstab" Grid.Column="1" 
+                                              BorderColor="#EF5350" 
                                               BorderThickness="2" 
-                                              Margin="0,-80,0,0" 
+                                              Margin="0,-45,0,0" 
                                               WidthRequest="300" 
                                               HeightRequest="300"                                                 
                                               Aspect="AspectFit"/>
@@ -82,19 +83,62 @@
                 </StackLayout>
             </cardView:CardView.CardViewContent>
         </cardView:CardView>
-            <Label x:Name="lbl_Endereco" Margin="0,-80"                                        
+        <Label x:Name="lbl_Endereco" Margin="0,-40"                                     
                    HorizontalTextAlignment="Center"
                    TextColor="{StaticResource asphaltPrimary}"                         
                    FontAttributes="Italic"
                    FontSize="13" />
 
-            <Label x:Name="lbl_Descricao" Margin="0,80"                                         
+        <Label x:Name="lbl_Descricao" Margin="0,40"                                       
                    HorizontalTextAlignment="Center"
                    TextColor="{StaticResource asphaltPrimary}"                           
                    FontSize="13" />
 
-        <Label Text="REDES SOCIAIS" TextColor="Black" HorizontalTextAlignment="Center" FontSize="16"></Label>
-        <Button x:Name="btn_instagram" FontSize="12"
+        <Label Text="HORÁRIO DE FUNCIONAMENTO" FontAttributes="Bold" 
+               TextColor="{StaticResource asphaltPrimary}" Margin="0,-25" 
+               HorizontalTextAlignment="Center" FontSize="14"/>
+
+        <StackLayout Orientation="Horizontal" Margin="0,25,0,0">
+            <StackLayout Spacing="2" Orientation="Vertical" VerticalOptions="Start" Margin="5,0,5,0">
+                <Label x:Name="lbl_Segunda"                                        
+                       HorizontalTextAlignment="Start"
+                       TextColor="{StaticResource asphaltPrimary}"                           
+                       FontSize="13" />
+                <Label x:Name="lbl_Terca"                                        
+                       HorizontalTextAlignment="Start"
+                       TextColor="{StaticResource asphaltPrimary}"                           
+                       FontSize="13"/>
+                <Label x:Name="lbl_Quarta"                                       
+                       HorizontalTextAlignment="Start"
+                       TextColor="{StaticResource asphaltPrimary}"                           
+                       FontSize="13"/>
+                <Label x:Name="lbl_Quinta"               
+                       HorizontalTextAlignment="Start"
+                       TextColor="{StaticResource asphaltPrimary}"                           
+                       FontSize="13"/>
+            </StackLayout>
+
+            <StackLayout Spacing="2" Orientation="Vertical" Margin="5,0,-10,0">
+                <Label x:Name="lbl_Sexta"                                       
+                       HorizontalTextAlignment="End"
+                       TextColor="{StaticResource asphaltPrimary}"                           
+                       FontSize="13"/>
+                <Label x:Name="lbl_Sabado"                                        
+                       HorizontalTextAlignment="End"
+                       TextColor="{StaticResource asphaltPrimary}"                           
+                       FontSize="13"/>
+                <Label x:Name="lbl_Domingo"                                       
+                       HorizontalTextAlignment="End"
+                       TextColor="{StaticResource asphaltPrimary}"                           
+                       FontSize="13"/>
+            </StackLayout>
+        </StackLayout>
+
+        <Label Text="REDES SOCIAIS" FontAttributes="Bold" 
+               TextColor="{StaticResource asphaltPrimary}"                
+               HorizontalTextAlignment="Center" FontSize="14"/>
+        
+            <Button x:Name="btn_instagram" FontSize="12"
                 Text="SIGA-NOS NO INSTAGRAM"
                 TextColor="White"
                 BorderRadius="10" 
@@ -105,5 +149,4 @@
                 HorizontalOptions="Center" 
                 VerticalOptions="Center"></Button>
     </StackLayout>
-
 </pages:PopupPage>
