--- a/DeLivre/DeLivre/Views/Estabelecimentos.xaml
+++ b/DeLivre/DeLivre/Views/Estabelecimentos.xaml
@@ -1,6 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
-             xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"             
+             xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"  
+             xmlns:custom="clr-namespace:Xamarin.Forms.PancakeView;assembly=Xamarin.Forms.PancakeView"
              xmlns:controls="clr-namespace:ImageCircle.Forms.Plugin.Abstractions;assembly=ImageCircle.Forms.Plugin"
              x:Class="DeLivre.Views.Estabelecimentos" BackgroundImage="fundoapp">
 
@@ -24,11 +25,46 @@
                 <Image Source="SemConexao" BackgroundColor="Transparent" HeightRequest="100" WidthRequest="100" ></Image>
             </StackLayout>
             <BoxView x:Name="boxLinha" Margin="3" HeightRequest="1" IsVisible="False" WidthRequest="10" Color="#EF5350" />
+            
+            <!--<ScrollView Orientation="Horizontal">
+                <StackLayout Margin="20,0,20,0" Orientation="Horizontal">
+                    <custom:PancakeView BackgroundColor="#EF5350" Margin="0,0,4,0" HeightRequest="60" WidthRequest="160" CornerRadius="12">
+                        <Label HorizontalTextAlignment="Center" VerticalOptions="Center" FontSize="16" TextColor="White">
+                            <Label.FormattedText>
+                                <FormattedString>
+                                    <Span Text=" "/>
+                                    <Span FontSize="16" Text="ALIMENTAÇÃO" />
+                                </FormattedString>
+                            </Label.FormattedText>
+                        </Label>
+                    </custom:PancakeView>
+                    <custom:PancakeView BackgroundColor="#EF5350" Margin="0,0,4,0" HeightRequest="60" WidthRequest="160" CornerRadius="12">
+                        <Label HorizontalTextAlignment="Center" VerticalOptions="Center" FontSize="16" TextColor="White">
+                            <Label.FormattedText>
+                                <FormattedString>
+                                    <Span Text=" "  />
+                                    <Span FontSize="16" Text="MERCADO"  />
+                                </FormattedString>
+                            </Label.FormattedText>
+                        </Label>
+                    </custom:PancakeView>
+                    --><!--<custom:PancakeView BackgroundColor="#2687ee" Margin="0,0,4,0" HeightRequest="60" WidthRequest="160" CornerRadius="12">
+                        <Label HorizontalTextAlignment="Center" VerticalOptions="Center" FontSize="16" TextColor="#fff">
+                            <Label.FormattedText>
+                                <FormattedString>
+                                    <Span Text=" "  />
+                                    <Span FontSize="16" Text="" />
+                                </FormattedString>
+                            </Label.FormattedText>
+                        </Label>
+                    </custom:PancakeView>--><!--
+                </StackLayout>
+            </ScrollView>-->
+            
             <ListView x:Name="ListaEstabelecimento"
                       CachingStrategy="RecycleElement"
-                      BackgroundColor="White"                    
-                      VerticalOptions="FillAndExpand"
-                      HasUnevenRows="true"
+                      BackgroundColor="White" HasUnevenRows="true"                    
+                      VerticalOptions="FillAndExpand"                  
                       SeparatorColor="Black" Refreshing="ListaEstabelecimento_Refreshing"
                       Margin="0,-5,0,5" IsPullToRefreshEnabled="True"             
                       ItemTapped="ListaVagas_ItemTapped" >
